<resources>

    <string name="app_name">Pepper</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_course_list">Course List</string>
    <string name="view_my_course_list">View My Course List</string>
    
    <string name="enter_course">Enter Course ID</string>
    <string name="add_to_course_list">Add</string>
    <string name="get_course_info_button">Info</string>
    
    <!--AlertDialog Strings  -->
    <string name="invalid_course_ID">Invalid CourseID Entered</string>
    <string name="missing_course_ID">Missing CourseID</string>
    <string name="OK_button">OK</string>
    <string name="Cancel_button">Cancel</string>    
    
    <string name="enter_button">Enter</string>
    <string name="delete_button">Clear List</string>   
    
    <!--Course Info Strings  -->
    <string name="course_id">CourseID</string>
    <string name="course_name">Course Name</string>
    <string name="section_num">Section</string>
    <string name="instructor">Instructor</string>
    <string name="meet_string">Meet Time</string>
    <string name="meet_room">Room</string>

    <!-- not used, Eclipse/Android apparently doesn't work with declaring a string var for webservice url.
    <string name="webservice_url">http://plato.cs.virginia.edu/~cs4720s14pepper/view/CLAS/</string>
     -->

</resources>