<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView 
        android:id="@+id/courseIDTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/course_id"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView 
        android:id="@+id/courseNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
		android:text="@string/course_name" />    
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView 
        android:id="@+id/instructorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
		android:text="@string/instructor"
        android:layout_weight="1" />
        <TextView 
        android:id="@+id/sectionNumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
		android:text="@string/section_num"
        android:layout_weight="1" />         
    </TableRow>
    
    <TableRow 
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView 
        android:id="@+id/meetStringTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
		android:text="@string/meet_string"
        android:layout_weight="1" />
        <TextView 
        android:id="@+id/meetRoomTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
		android:text="@string/meet_room"
        android:layout_weight="1" />         
    </TableRow>

</TableLayout>
