<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/enterCourseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_course" />

        <EditText
            android:id="@+id/CourseIDEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_weight="1" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/EnterCourseIDButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_button" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/baby_blue" >

        <TextView
            android:id="@+id/CourseListTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:padding="5dp"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:text="@string/title_activity_course_list" 
            android:textSize="@dimen/course_ID_list_text_size"/>
        

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/baby_blue" 
		android:layout_weight="1" >
        
        <ScrollView
            android:id="@+id/courseScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_span="2"
            android:padding="5dp"
            >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:stretchColumns="yes" >
                
            </TableLayout>
        </ScrollView>

    </TableRow>
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/deleteCourseIDButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_button"
            android:layout_span="2"
            android:layout_weight="1" />
    
    </TableRow>

    
</TableLayout>
